[workspace]

[package]
name = "snowchains"
version = "0.7.0"
edition = "2018"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tools for online programming contests"
repository = "https://github.com/qryxip/snowchains"
documentation = "https://docs.rs/snowchains"
readme = "README.md"
keywords = ["competitive", "cli", "windows"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
az = "1.2.0"
cookie_store = "0.12.0"
crossbeam-utils = "0.8.5"
dhall = "0.10.1"
dirs-next = "2.0.0"
fwdansi = "1.1.0"
heck = "0.3.2"
human-size = "0.4.1"
indexmap = { version = "1.7.0", features = ["serde-1"] }
indicatif = "0.15.0"
itertools = "0.10.3"
maplit = "1.0.2"
reqwest = { version = "0.11.8", default-features = false, features = ["blocking"] }
rpassword = "5.0.1"
rprompt = "1.0.5"
serde = { version = "1.0.132", features = ["derive"] }
serde_dhall = "0.10.1"
serde_json = "1.0.73"
serde_yaml = "0.8.23"
shell-escape = "0.1.5"
snowchains_core = { version = "0.13.1", path = "./snowchains_core" }
structopt = "0.3.25"
strum = { version = "0.20.0", features = ["derive"] }
tempfile = "3.2.0"
termcolor = "1.1.2"
tokio = { version = "1.15.0", features = ["signal"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
rusty-fork = "0.3.0"
