[package]
name = "snowchains_proc_macros"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
combine = "3.6.6"
if_chain = "0.1.3"
proc-macro2 = "0.4.27"
quote = "0.6.11"
syn = { version = "0.15.26", features = ["full"] }
