[package]
name = "snowchains_proc_macros"
version = "0.1.0"
edition = "2018"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "proc-macros for `snowchains`"
repository = "https://github.com/qryxip/snowchains"
documentation = "https://docs.rs/snowchains_proc_macros"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
if_chain = "1.0.0"
itertools = "0.8.2"
proc-macro2 = "1.0.8"
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full", "extra-traits"] }
