[package]
name = "snowchains_core"
version = "0.13.2"
edition = "2018"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Crate for accessing competitive programming websites and testing your code."
repository = "https://github.com/qryxip/snowchains"
documentation = "https://docs.rs/snowchains_core"
readme = "README.md"
keywords = ["competitive", "windows"]
categories = ["command-line-utilities"]

[features]
default = []
__test_with_credentials = []

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4.19", features = ["serde"] }
cookie_store = "0.12.0"
derivative = "2.2.0"
derive_more = "0.99.17"
easy-ext = "0.2.6"
either = "1.6.1"
form_urlencoded = "1.0.1"
fs2 = "0.4.3"
futures-util = "0.3.19"
hex = "0.4.3"
humantime = "2.1.0"
humantime-serde = "1.0.1"
ignore = "0.4.18"
indexmap = { version = "1.7.0", features = ["serde-1"] }
indicatif = { version = "0.15.0", features = ["improved_unicode", "rayon"] }
itertools = "0.10.3"
maplit = "1.0.2"
nom = "6.1.2"
num_cpus = "1.13.1"
once_cell = "1.9.0"
percent-encoding = "2.1.0"
prettytable-rs = "0.8.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.8", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
scraper = "0.12.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.8.23"
sha2 = "0.9.3"
strum = { version = "0.20.0", features = ["derive"] }
tempfile = "3.2.0"
termcolor = "1.1.2"
tokio = { version = "1.15.0", features = ["fs", "io-util", "process", "rt-multi-thread", "signal", "sync", "time"] }
unicode-width = "0.1.9"
url = { version = "2.2.2", features = ["serde"] }
yaml-rust = "0.4.5"
which = "4.2.2"
camino = { version = "1.0.5", features = ["serde1"] }

[dev-dependencies]
atty = "0.2.14"
difference = "2.0.0"
fwdansi = "1.1.0"
insta = "1.9.0"
pretty_assertions = "0.7.1"
rpassword = "5.0.1"
rprompt = "1.0.5"
structopt = "0.3.25"
